[gd_scene load_steps=2 format=3 uid="uid://cxrgw18xhucqo"]

[ext_resource type="Script" path="res://Scripts/PauseMenu.gd" id="1_r7pec"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r7pec")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="VersionTxt" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -69.0
offset_right = 156.0
grow_vertical = 0
theme_override_font_sizes/font_size = 21
text = "v0.0.1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsPanel" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 26
current_tab = 2

[node name="General" type="Control" parent="OptionsPanel/TabContainer"]
visible = false
layout_mode = 2

[node name="Gameplay" type="Control" parent="OptionsPanel/TabContainer"]
visible = false
layout_mode = 2

[node name="Graphics" type="Control" parent="OptionsPanel/TabContainer"]
layout_mode = 2

[node name="Control2" type="Control" parent="OptionsPanel/TabContainer/Graphics"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsPanel/TabContainer/Graphics/Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FullscreenToggle" type="CheckButton" parent="OptionsPanel/TabContainer/Graphics/Control2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Fullscreen"

[node name="VSyncToggle" type="CheckButton" parent="OptionsPanel/TabContainer/Graphics/Control2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "V-Sync"

[node name="Bloom" type="CheckButton" parent="OptionsPanel/TabContainer/Graphics/Control2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
button_pressed = true
text = "Bloom
"

[node name="Audio" type="Control" parent="OptionsPanel/TabContainer"]
visible = false
layout_mode = 2

[node name="Control3" type="Control" parent="OptionsPanel/TabContainer/Audio"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsPanel/TabContainer/Audio/Control3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FullscreenToggle" type="CheckButton" parent="OptionsPanel/TabContainer/Audio/Control3/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Fullscreen"

[node name="MuteToggle" type="CheckButton" parent="OptionsPanel/TabContainer/Audio/Control3/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Disable All Sounds"

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsPanel/TabContainer/Audio/Control3/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 250

[node name="Label" type="Label" parent="OptionsPanel/TabContainer/Audio/Control3/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Master Volume"

[node name="Label2" type="Label" parent="OptionsPanel/TabContainer/Audio/Control3/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "0"

[node name="HSlider" type="HSlider" parent="OptionsPanel/TabContainer/Audio/Control3/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="OptionsPanel/TabContainer/Audio/Control3/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 250

[node name="Label" type="Label" parent="OptionsPanel/TabContainer/Audio/Control3/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Music                 "

[node name="Label2" type="Label" parent="OptionsPanel/TabContainer/Audio/Control3/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "0"

[node name="HSlider" type="HSlider" parent="OptionsPanel/TabContainer/Audio/Control3/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="OptionsPanel/TabContainer/Audio/Control3/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 250

[node name="Label" type="Label" parent="OptionsPanel/TabContainer/Audio/Control3/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "SFX                     "

[node name="Label2" type="Label" parent="OptionsPanel/TabContainer/Audio/Control3/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "0"

[node name="HSlider" type="HSlider" parent="OptionsPanel/TabContainer/Audio/Control3/VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="OptionsPanel/TabContainer/Audio/Control3/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 250

[node name="Label" type="Label" parent="OptionsPanel/TabContainer/Audio/Control3/VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Environnement"

[node name="Label2" type="Label" parent="OptionsPanel/TabContainer/Audio/Control3/VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "0"

[node name="HSlider" type="HSlider" parent="OptionsPanel/TabContainer/Audio/Control3/VBoxContainer/HBoxContainer4"]
layout_mode = 2

[node name="Accessibility" type="Control" parent="OptionsPanel/TabContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -52.0
offset_top = -40.0
offset_right = 52.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 15

[node name="BackBtn" type="Button" parent="OptionsPanel/HBoxContainer"]
layout_mode = 2
text = "Back"

[node name="SaveBtn" type="Button" parent="OptionsPanel/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="BaseButtons" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BaseButtons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = -106.5
offset_right = 78.0
offset_bottom = 106.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 17

[node name="PauseTxt" type="Label" parent="BaseButtons/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "PAUSE"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="ResumeBtn" type="Button" parent="BaseButtons/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="OptionsBtn" type="Button" parent="BaseButtons/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="QuitBtn" type="Button" parent="BaseButtons/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="toggled" from="OptionsPanel/TabContainer/Graphics/Control2/VBoxContainer/FullscreenToggle" to="." method="set_fullscreen"]
[connection signal="pressed" from="OptionsPanel/HBoxContainer/BackBtn" to="." method="toggle_options_panel"]
[connection signal="pressed" from="BaseButtons/VBoxContainer/ResumeBtn" to="." method="toggle_pause_menu"]
[connection signal="pressed" from="BaseButtons/VBoxContainer/OptionsBtn" to="." method="toggle_options_panel"]
[connection signal="pressed" from="BaseButtons/VBoxContainer/QuitBtn" to="." method="_on_quit_pressed"]
